# koe

./: .env.example  .gitignore  LICENSE  README.ja.md  README.md  pyproject.toml
prompts/: cleanup_ja.md
src/: app.py  audio.py  config.py  hotkey.py  inserter.py  llm.py  pipeline.py  stt.py  vad.py
tests/: test_audio.py  test_inserter.py  test_llm.py  test_pipeline.py
